--- a/course.css
+++ b/course.css
@@ -103,6 +103,49 @@ h1 {
     margin-top: -5px;
 }
 
+.text-container-options {
+  padding: 30px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50px;
+  margin-bottom: 50px;
+}
+
+.text-container-options button {
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+  border: none;
+}
+
+.text-container-options img {
+  width: 100%;
+}
+
+.principles-list {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 400px;
+  justify-content: space-evenly;
+  justify-self: center;
+  gap: 20px;
+  padding: 5px;
+}
+
+.principles-list-item {
+  font-size: 12px;
+  background-color: lightgray;
+  color: #023E8A;
+  border-radius: 10px;
+  width: 100%;
+}
+
 p {
     font-size: 18px;
     margin: 20px 0;
@@ -116,7 +159,7 @@ p {
     margin-top: 50px;
     font-weight: bold;
     display: inline-block;
-    background-color: #0047ff;
+    background-color: #2a54c0;
     padding: 12px 25px;
     border-radius: 4px;
     text-decoration: none;
